--- a/Style/Stylesheet.css
+++ b/Style/Stylesheet.css
@@ -12,4 +12,29 @@ header h1 {
   letter-spacing: normal;
   padding-top: 15px;
 }
+
+.Container {
+  width: 100%;
+  height: 100px;
+  background-color: lightgray;
+}
+
+.Container .Select {
+  text-align: center;
+  padding-top: 25px;
+}
+
+.Container .Select button {
+  width: 150px;
+  height: 50px;
+  border-radius: 5px 5px 5px 5px;
+  background-color: purple;
+  border: 2px 2px 2px 2px gray;
+}
+
+.Container .Select button span {
+  color: white;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+}
 /*# sourceMappingURL=Stylesheet.css.map */
