--- a/Style/Stylesheet.scss
+++ b/Style/Stylesheet.scss
@@ -11,3 +11,25 @@ h1 {
     padding-top: 15px;
 }
 }
+
+.Container {
+    width: 100%;
+    height: 100px;
+    background-color: lightgray;
+    .Select {
+        text-align: center;
+        padding-top: 25px;
+    button {
+        width: 150px;
+        height: 50px;
+        border-radius: 5px 5px 5px 5px;
+        background-color: purple;
+        border: 2px 2px 2px 2px gray;
+        span {
+            color: white;
+            font-weight: bold;
+            font-family: 'Poppins', sans-serif;
+        }
+    }
+}
+}
