--- a/Style/Stylesheet.css
+++ b/Style/Stylesheet.css
@@ -1,3 +1,7 @@
+body {
+  background-color: purple;
+}
+
 header {
   width: 100%;
   height: 125px;
@@ -36,5 +40,16 @@ header h1 {
   color: white;
   font-weight: bold;
   font-family: 'Poppins', sans-serif;
+}
+
+.ImageContain {
+  width: 100%;
+  height: 625px;
+  background-color: grey;
+  text-align: center;
+}
+
+.ImageContain #Image {
+  padding-top: 60px;
 }
 /*# sourceMappingURL=Stylesheet.css.map */
