--- a/Style/Stylesheet.scss
+++ b/Style/Stylesheet.scss
@@ -1,3 +1,7 @@
+body {
+    background-color: purple;
+}
+
 header {
 width: 100%;
 height: 125px;
@@ -31,5 +35,15 @@ h1 {
             font-family: 'Poppins', sans-serif;
         }
     }
+}
+}
+
+.ImageContain {
+width: 100%;
+height: 625px;
+background-color: grey;
+text-align: center;
+#Image {
+    padding-top: 60px;
 }
 }
