--- a/Style/Stylesheet.css
+++ b/Style/Stylesheet.css
@@ -49,7 +49,7 @@ header h1 {
   text-align: center;
 }
 
-.ImageContain #Image {
+.ImageContain #Imagebox {
   padding-top: 60px;
 }
 /*# sourceMappingURL=Stylesheet.css.map */
