--- a/Style/Stylesheet.scss
+++ b/Style/Stylesheet.scss
@@ -20,6 +20,7 @@ h1 {
     width: 100%;
     height: 100px;
     background-color: lightgray;
+    margin-top: 650px;
     .Select {
         text-align: center;
         padding-top: 25px;
