--- a/Style/Stylesheet.css
+++ b/Style/Stylesheet.css
@@ -42,4 +42,8 @@ header h1 {
   font-weight: bold;
   font-family: 'Poppins', sans-serif;
 }
+
+.FormBox {
+  display: none;
+}
 /*# sourceMappingURL=Stylesheet.css.map */
