--- a/Style/Stylesheet.css
+++ b/Style/Stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  background-color: purple;
+  background-color: white;
 }
 
 header {
@@ -20,7 +20,7 @@ header h1 {
 .Container {
   width: 100%;
   height: 100px;
-  background-color: lightgray;
+  background-color: gray;
   margin-top: 650px;
 }
 
@@ -45,5 +45,26 @@ header h1 {
 
 .FormBox {
   display: none;
+  width: 500px;
+  height: 50px;
+  background-color: purple;
+  z-index: 100;
+  position: absolute;
+  margin-left: 100px;
+  margin-top: -450px;
+}
+
+.FormBox input {
+  font-family: 'Poppins', sans-serif;
+  color: black;
+  border: gray 1px solid;
+}
+
+.FormBox button {
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+  color: purple;
+  font-weight: bold;
 }
 /*# sourceMappingURL=Stylesheet.css.map */
