--- a/Style/Stylesheet.scss
+++ b/Style/Stylesheet.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: purple;
+    background-color: white;
 }
 
 header {
@@ -19,7 +19,7 @@ h1 {
 .Container {
     width: 100%;
     height: 100px;
-    background-color: lightgray;
+    background-color: gray;
     margin-top: 650px;
     .Select {
         text-align: center;
@@ -41,4 +41,24 @@ h1 {
 
 .FormBox {
     display: none;
+    width: 500px;
+    height: 50px;
+    background-color: purple;
+    z-index: 100;
+    position: absolute;
+    margin-left: 100px;
+    margin-top: -450px;
+    input {
+        font-family: 'Poppins', sans-serif;
+        color: black;
+        border: gray 1px solid;
+    }
+    button {
+        border-radius: 5px 5px 5px 5px;
+        background-color: white;
+        font-family: 'Poppins', sans-serif;
+        color: purple;
+        font-weight: bold;
+    }
+    
 }
