--- a/Style/Stylesheet.css
+++ b/Style/Stylesheet.css
@@ -1,11 +1,7 @@
-body {
-  background-color: white;
-}
-
 header {
+  background-color: gray;
   width: 100%;
-  height: 125px;
-  background-color: grey;
+  height: 100px;
 }
 
 header h1 {
@@ -14,7 +10,6 @@ header h1 {
   font-size: 60px;
   text-align: center;
   letter-spacing: normal;
-  padding-top: 15px;
 }
 
 .Container {
@@ -43,28 +38,7 @@ header h1 {
   font-family: 'Poppins', sans-serif;
 }
 
-.FormBox {
-  display: none;
-  width: 500px;
-  height: 50px;
-  background-color: purple;
-  z-index: 100;
-  position: absolute;
-  margin-left: 100px;
-  margin-top: -450px;
-}
-
-.FormBox input {
+input {
   font-family: 'Poppins', sans-serif;
-  color: black;
-  border: gray 1px solid;
-}
-
-.FormBox button {
-  border-radius: 5px 5px 5px 5px;
-  background-color: white;
-  font-family: 'Poppins', sans-serif;
-  color: purple;
-  font-weight: bold;
 }
 /*# sourceMappingURL=Stylesheet.css.map */
