--- a/Style/Stylesheet.scss
+++ b/Style/Stylesheet.scss
@@ -1,19 +1,14 @@
-body {
-    background-color: white;
-}
-
 header {
-width: 100%;
-height: 125px;
-background-color: grey;
-h1 {
-    font-family: 'Poppins', sans-serif;
+    background-color: gray;
+    width: 100%;
+    height: 100px;
+    h1 {
+        font-family: 'Poppins', sans-serif;
     color: purple;
     font-size: 60px;
     text-align: center;
     letter-spacing: normal;
-    padding-top: 15px;
-}
+    }
 }
 
 .Container {
@@ -39,26 +34,6 @@ h1 {
 }
 }
 
-.FormBox {
-    display: none;
-    width: 500px;
-    height: 50px;
-    background-color: purple;
-    z-index: 100;
-    position: absolute;
-    margin-left: 100px;
-    margin-top: -450px;
-    input {
-        font-family: 'Poppins', sans-serif;
-        color: black;
-        border: gray 1px solid;
-    }
-    button {
-        border-radius: 5px 5px 5px 5px;
-        background-color: white;
-        font-family: 'Poppins', sans-serif;
-        color: purple;
-        font-weight: bold;
-    }
-    
+input {
+    font-family: 'Poppins', sans-serif;
 }
