--- a/Style/Stylesheet.scss
+++ b/Style/Stylesheet.scss
@@ -3,13 +3,18 @@ header {
     width: 100%;
     height: 100px;
     h1 {
-        font-family: 'Poppins', sans-serif;
-    color: purple;
-    font-size: 60px;
-    text-align: center;
-    letter-spacing: normal;
-    }
+        font-family: 'Amatic SC', cursive;
+        color: white;
+        font-size: 65px;
+        text-align: center;
+        letter-spacing: normal;
+	    font-weight: bold;
+      text-shadow: 3px 3px 0px #eb452b, 
+                  5px 5px 0px #CC7722, 
+                  8px 8px 0px #052939, 
 }
+    }
+
 
 .Container {
     width: 100%;
@@ -23,12 +28,14 @@ header {
         width: 150px;
         height: 50px;
         border-radius: 5px 5px 5px 5px;
-        background-color: purple;
+        background-color: #CC7722;
         border: 2px 2px 2px 2px gray;
         span {
-            color: white;
+            color: white; 
+            font-size: 20px;
             font-weight: bold;
-            font-family: 'Poppins', sans-serif;
+            letter-spacing: normal;        
+            font-family: 'Amatic SC', cursive;
         }
     }
 }
@@ -37,3 +44,16 @@ header {
 input {
     font-family: 'Poppins', sans-serif;
 }
+
+@media (max-width: 479.98px) {
+    .Container {
+        height: 150px;
+    }
+}
+
+@media (min-width: 480px) and (max-width: 655px) {
+    .Container {
+        height: 150px;
+    }
+}
+
